@@ -22,6 +22,7 @@ Version 1.0 - 2012-06-XX
  * Update artist translation to use new alias features (primary flag, sort names) (PICARD-200)
  * Deleted tags aren't indicated as changes (PICARD-165)
  * Picard log entries have inaccurate timestamp (PICARD-45)
+ * Interface doesn't allow keyboard only management (PICARD-103)
 
 Version 0.16 - 2011-10-23
  * Added AcoustID support.
